--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Sep 09 14:57:40 BDT 2018
-sdk.dir=C\:\\Users\\Rj Rohit\\AppData\\Local\\Android\\Sdk
+#Mon Sep 10 18:39:08 IST 2018
+ndk.dir=/home/skdj/Android/Sdk/ndk-bundle
+sdk.dir=/home/skdj/Android/Sdk
