--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Sep 14 22:24:11 IST 2018
-sdk.dir=/home/rohit/Android/Sdk
+#Fri Sep 21 22:21:46 IST 2018
+sdk.dir=C\:\\Users\\Sougata Ghosh\\AppData\\Local\\Android\\Sdk
